Fix email alignment

--- a/src/pages/Researchers/Personal_pages/Alexandre/alexandre.module.css
+++ b/src/pages/Researchers/Personal_pages/Alexandre/alexandre.module.css
@@ -13,7 +13,7 @@
   }
 
 
-.Professor p {
+.Professor > p {
   font-size: 25px;
   color: #363F5; 
   padding-left: 250px;
